monitoring/grafana/templates/ingress.yml
#@ load("@ytt:data", "data")
#@ load("_ytt.lib.yml", "labels")

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
  labels: #@ labels()
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-url: http://basic-auth.ingress-nginx.svc.cluster.local:8080
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Ingress"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - secretName: grafana-ingress-tls
    hosts:
    #@ for/end host in data.values.domains:
    - #@ "grafana." + host
  rules:
  #@ for/end host in data.values.domains:
  - host: #@ "grafana." + host
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
